fix: arrow-left icon not centered (#3013)

--- a/src/design/ant/index.less
+++ b/src/design/ant/index.less
@@ -8,22 +8,6 @@
   }
 }
 
-span.anticon:not(
-    .app-iconify,
-    .anticon-vertical-align-top,
-    .anticon-bell,
-    .anticon-left,
-    .anticon-right,
-    .anticon-check-circle,
-    .anticon-info-circle,
-    .anticon-close-circle,
-    .anticon-exclamation-circle,
-    .anticon-loading,
-    .anticon-close
-  ) {
-  vertical-align: 0.125em !important;
-}
-
 .ant-back-top {
   right: 20px;
   bottom: 20px;
